Updated url for license

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <licenses>
         <license>
             <name>The University of Illinois/NCSA Open Source License (NCSA)</name>
-            <url>http://opensource.org/licenses/NCSA</url>
+            <url>http://www.opensource.org/licenses/UoI-NCSA.php</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
