Updated pom -Adding license to jar -Updating artifact name -Updating version number

--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,201 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wcohen</groupId>
-  <artifactId>com.wcohen.secondstring</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>SecondString</name>
-  <description>A bunch of fancy soft string matching routines, with some accompanying datasets</description>
-  <url>https://github.com/TeamCohen/secondstring</url>
-  <licenses>
-        <license>
-            <name>The University of Illinois/NCSA Open Source License (NCSA)</name>
-            <url>http://www.opensource.org/licenses/UoI-NCSA.php</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-     <scm>
-        <connection>scm:git:git@github.com:TeamCohen/secondstring.git</connection>
-        <developerConnection>scm:git:git@github.com:TeamCohen/secondstring.git</developerConnection>
-        <url>git@github.com:TeamCohen/secondstring</url>
-    </scm>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-  </plugins>
-  </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.8</version>
-  	</dependency>
-  </dependencies>
-      <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </reporting>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.wcohen</groupId>
+	<artifactId>secondstring</artifactId>
+	<version>0.2</version>
+	<name>SecondString</name>
+	<description>A bunch of fancy soft string matching routines, with some accompanying datasets</description>
+	<url>https://github.com/TeamCohen/secondstring</url>
+	<licenses>
+		<license>
+			<name>The University of Illinois/NCSA Open Source License (NCSA)</name>
+			<url>http://www.opensource.org/licenses/UoI-NCSA.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:git@github.com:TeamCohen/secondstring.git</connection>
+		<developerConnection>scm:git:git@github.com:TeamCohen/secondstring.git</developerConnection>
+		<url>git@github.com:TeamCohen/secondstring</url>
+	</scm>
+	<developers>
+		<developer>
+			<name>William W. Cohen</name>
+			<url>http://wcohen.com/</url>
+		</developer>
+		<developer>
+			<name>Pradeep Ravikumar</name>
+			<url>http://www.cs.cmu.edu/~pradeepr</url>
+		</developer>
+		<developer>
+			<name>Stephen Fienberg</name>
+			<url>http://www.stat.cmu.edu/~fienberg</url>
+		</developer>
+		<developer>
+			<name>Kathryn Rivard</name>
+			<url>http://www.cs.cmu.edu/~krivard</url>
+		</developer>
+	</developers>
+	<dependencies>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.8</version>
+		</dependency>
+	</dependencies>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration> <!-- add this to disable checking -->
+							<additionalparam>-Xdoclint:none</additionalparam>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<profiles>
+			<profile>
+			<!-- 
+			 - This profile takes care of copying the NOTICE, LICENSE, etc. files to the proper
+			 - locations.
+			 -->
+			<id>add-license</id>
+			<activation>
+				<file><exists>LICENSE.txt</exists></file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.gmaven</groupId>
+						<artifactId>gmaven-plugin</artifactId>
+						<version>1.5</version>
+						<inherited>true</inherited>
+						<dependencies>
+						    <!-- 
+						      - Workaround for potential conflict between Groovy version used here
+						      - and in projects inheriting from this POM.
+						      -->
+							<dependency>
+								<groupId>org.codehaus.groovy</groupId>
+								<artifactId>groovy-all</artifactId>
+								<version>1.8.8</version>
+							</dependency>
+							<dependency>
+								<groupId>org.apache.ant</groupId>
+								<artifactId>ant</artifactId>
+								<version>1.7.0</version>
+							</dependency>
+						</dependencies>
+					</plugin>							
+					<!-- The DEPENDENCIES and NOTICE templates are read here -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-remote-resources-plugin</artifactId>
+						<inherited>true</inherited>
+						<executions>
+							<execution>
+								<id>process-remote-resources</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>process</goal>
+								</goals>
+								<configuration>
+									<resourceBundles>
+										<resourceBundle>de.tudarmstadt.ukp.dkpro.core:build-resources:1</resourceBundle>
+									</resourceBundles>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-resources-plugin</artifactId>
+						<inherited>true</inherited>
+						<executions>
+							<execution>
+								<id>copy-license</id>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<phase>generate-resources</phase>
+								<configuration>
+									<outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
+									<resources>
+										<resource>
+											<filtering>false</filtering>
+											<directory>${basedir}</directory>
+											<includes>
+												<include>README.txt</include>
+												<include>LICENSE.txt</include>
+											</includes>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
